--- a/ml/metrics.ipynb
+++ b/ml/metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "b3a03740",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "f242fc19",
    "metadata": {},
    "outputs": [
@@ -56,6 +56,102 @@
     "\n",
     "# [[TN, FP],\n",
     "#  [FN, TP]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "917d1546",
+   "metadata": {},
+   "source": [
+    "## Mean Absolute Error(MAE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9c4eeb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# take the mistake differnce \n",
+    "# remove the negative sign\n",
+    "# add them all up\n",
+    "# divide by number of points\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65203978",
+   "metadata": {},
+   "source": [
+    "## Mean Squared Error(MSE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "833fdbe5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# square all the individual differences\n",
+    "# add them all up\n",
+    "# divide by number of points"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcf32ce2",
+   "metadata": {},
+   "source": [
+    "## Root Mean Squared Error(RMSE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8982872",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# take the mistake differnce\n",
+    "# square it\n",
+    "# add them all up\n",
+    "# divide by number of points\n",
+    "# take the square root\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "afd0d328",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error (MAE): 7.5\n",
+      "Mean Squared Error (MSE): 62.5\n",
+      "Root Mean Squared Error (RMSE): 7.91\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "import numpy as np\n",
+    "\n",
+    "y_true = [90,60,80,100]\n",
+    "y_pred = [100,70,85,95]\n",
+    "\n",
+    "mae = mean_absolute_error(y_true, y_pred)\n",
+    "mse = mean_squared_error(y_true, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "\n",
+    "print(\"Mean Absolute Error (MAE):\", mae)\n",
+    "print(\"Mean Squared Error (MSE):\", mse)\n",
+    "print(\"Root Mean Squared Error (RMSE):\", round(rmse,2))"
    ]
   }
  ],
