--- a/ml-sheriyans/data-preprocessing.ipynb
+++ b/ml-sheriyans/data-preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "c3b6b387",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "49980ec8",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "4a961c40",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
        "(1338, 7)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "eed1914a",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "b8ec6d2e",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "max      64.000000    53.130000     5.000000  63770.428010"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "b8cc7e23",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "4b6d2870",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
        "Index(['age', 'sex', 'bmi', 'children', 'smoker', 'region', 'charges'], dtype='object')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "8eabe6e5",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "0a546e91",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
        "<Axes: xlabel='children', ylabel='count'>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "fc22e2e9",
    "metadata": {},
    "outputs": [
@@ -361,7 +361,7 @@
        "<Axes: xlabel='sex', ylabel='count'>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "c2c004b2",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
        "<Axes: xlabel='smoker', ylabel='count'>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "id": "38248125",
    "metadata": {},
    "outputs": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "id": "17d46bd0",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "436d3986",
    "metadata": {},
    "outputs": [],
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "id": "19700b59",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
        "4   32    male  28.880         0     no  northwest   3866.85520"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "id": "9146f54a",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
        "(1338, 7)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "id": "612a6c78",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,7 @@
        "(1337, 7)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "id": "53bb7830",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "id": "8df25766",
    "metadata": {},
    "outputs": [
@@ -711,7 +711,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "id": "b00bef9b",
    "metadata": {},
    "outputs": [
@@ -820,7 +820,7 @@
        "4   32    1  28.880         0     no  northwest   3866.85520"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "id": "ca026fc8",
    "metadata": {},
    "outputs": [
@@ -846,7 +846,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "id": "6ebacfc4",
    "metadata": {},
    "outputs": [
@@ -955,7 +955,7 @@
        "4   32    1  28.880         0       0  northwest   3866.85520"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "id": "d3e99f82",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1065,7 @@
        "4   32        1  28.880         0          0  northwest   3866.85520"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "id": "77a9c46f",
    "metadata": {},
    "outputs": [
@@ -1095,7 +1095,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "id": "71e5544f",
    "metadata": {},
    "outputs": [],
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "id": "637d235f",
    "metadata": {},
    "outputs": [
@@ -1233,7 +1233,7 @@
        "4             False             False  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "id": "372a161b",
    "metadata": {},
    "outputs": [],
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 28,
    "id": "6e7baead",
    "metadata": {},
    "outputs": [
@@ -1371,13 +1371,31 @@
        "4                 0                 0  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_cleaned.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "555683cb",
+   "metadata": {},
+   "source": [
+    "# Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45265c9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now based on the bmi we will create a new column named \"bmi_category\" to improve our model efficiency\n"
    ]
   }
  ],
